# ita

./: .gitignore  LICENSE  README.md  install.sh  plugin.json  pyproject.toml  pytest.ini
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
docs/: API_VERSIONS.md  CONTRACT.md  DECISIONS.md  RESUME.md  TESTING.md  bug-bash-wave-1-plan.md  rule4-xfails-plan.md
docs/plans/: 2026-04-10-ita-implementation.md
docs/specs/: 2026-04-10-ita-design.md
scripts/: README.md  flake_check.py  run-integration-smoke.sh  update_json_snapshots.py
skills/ita/: SKILL.md
src/: __main__.py  _broadcast.py  _config.py  _core.py  _events.py  _interactive.py  _io.py  _layout.py  _layouts.py  _lock.py  _management.py  _meta.py  _orientation.py  _output.py  _overview.py  _pane.py  _protect.py  _query.py  _readiness.py  _screen.py  _send.py  _session.py  _stream.py  _tab.py  _tmux.py  ita.py
src/ita/: __init__.py  __main__.py  _cascade.py  _claudecode.py  _config.py  _coprocess.py  _core.py  _envelope.py  _events.py  _filter.py  _force.py  _inject.py  _interactive.py  _layout.py  _layouts.py  _lock.py  _management.py  _meta.py  _on_prompt.py  _on_session.py  _orientation.py  _output.py  _overview.py  _pane.py  _probe.py  _protect.py  _query.py  _readiness.py  _run.py  _screen.py  _send.py  _session.py  _state.py  _stdin.py  _stream.py  _tab.py  _tmux.py
src/ita.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: _contract_categories.py  _contract_helpers.py  conftest.py  helpers.py  test_adversarial.py  test_adversarial_concurrency.py  test_adversarial_malformed.py  test_background_flag.py  test_broadcast.py  test_broadcast_redesign.py  test_bugs.py  test_cli_args.py  test_config.py  test_contract_matrix.py  test_contracts.py  test_core.py  test_create_race.py  test_envelope.py  test_events.py  test_fault_injection.py  test_focus_naming_342.py  test_global_flags.py  test_inject_envelope.py  test_inject_utf8_229.py  test_integration.py  test_interactive.py  test_invariant_event_timeouts_explicit.py  test_invariant_fresh_sessions_ready.py  test_invariant_mutators_honor_locking.py  test_invariant_mutators_honor_protection.py  test_invariant_no_silent_noop.py  test_invariant_no_traceback.py  test_invariant_stdout_clean.py  test_issue_222.py  test_issue_320.py  test_issue_330.py  test_issue_362_group_e.py  test_issue_401.py  test_json_schema_snapshots.py  test_layout.py  (+43 more)
tests/fixtures/: __init__.py  environment.py  sessions.py
