[project]
name = "ita"
version = "0.3.0"
requires-python = ">=3.11"

# Note: bare _* sibling imports in ita.py require sys.path manipulation;
# installed entry point works only when src/ is the package root (e.g. via pythonpath).
# Use `uv run --script src/ita.py` for the inline-script mode.
[project.scripts]
ita = "ita:cli"

[project.optional-dependencies]
dev = ["pytest", "hypothesis"]

[tool.pytest.ini_options]
pythonpath = ["src"]
# Run with: uv run --with pytest --with hypothesis --with click --with iterm2 pytest tests/
