[project]
name = "ita"
version = "0.7.0"
requires-python = ">=3.11"
dependencies = ["click", "iterm2"]

[project.scripts]
ita = "ita:main"

[project.optional-dependencies]
dev = [
	"pytest",
	"hypothesis",
	"pytest-cov",
	"pytest-xdist",
	"pytest-timeout",
	"pytest-benchmark",
	"pytest-json-report",
	"jsonschema",
	"ruff",
	"mutmut",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ita"]

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
# `pythonpath = src` lets tests import `ita` without an editable install.
# Markers and CI lanes: see docs/TESTING.md.
markers = [
	"integration: live iTerm2 required; auto-skip if API unreachable",
	"stress: slow cross-session / load tests; weekly or on-demand",
	"perf: latency-budget benchmarks; nightly",
	"adversarial: concurrency, races, malformed input, disconnects — 'try to break it'",
	"regression: guards a previously-fixed bug; name test_issue_<n>_*",
	"contract: cross-cutting guarantees (--json schema, --quiet, exit codes, output hygiene)",
	"property: hypothesis-driven fuzz over IDs, names, payloads, timeouts",
	"edge: empty / huge / unicode / whitespace / boundary inputs and states",
	"error: invalid input → specific error message and non-zero rc",
	"state: idempotency and persistence across invocations",
	"known_broken: documents an unfixed bug; expected to fail",
	"xfail_flaky: racy/async — filed as a bug; do not fix in test",
	"fault_injection: in-process fault scenarios; no live iTerm2 required",
]

[tool.mutmut]
paths_to_mutate = "src/ita/"
runner = "uv run pytest -m 'not integration and not stress and not perf and not fault_injection' -x --timeout=30"
